<resources>
    <string name="app_name">AplikacjaGabinet</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_main_dashboard">MainDashboardActivity</string>
    <string name="title_activity_appointment_calendar">AppointmentCalendarActivity</string>
    <string name="title_activity_available_slots">AvailableSlotsActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_fullscreen_image">FullscreenImageActivity</string>
    <string name="login">Logowanie</string>
    <string name="email">Email</string>
    <string name="Password">Hasło</string>
    <string name="Log_in">Zaloguj się</string>
    <string name="Sign_up">Zarejestruj się</string>
    <string name="Reset_password">Resetuj hasło</string>
    <string name="Register">Rejestracja</string>
    <string name="Login">Logowanie</string>
    <string name="Name">Imię</string>
    <string name="Last_name">Nazwisko</string>
    <string name="phone_number">Numer telefonu</string>
    <string name="admin_panel">Panel Admina</string>
    <string name="Change_email">Zmień adres email</string>
    <string name="Change_number">Zmień nr Telefonu</string>
    <string name="Contact_info">Informacje Kontaktowe</string>
    <string name="Delete_account">Usuń konto</string>
    <string name="logout">Wyloguj się</string>
    <string name="leave_review">Wystaw Opinię</string>
    <string name="upload_photos">Upload Photos</string>
    <string name="show_appointments">Zobacz Wizyty</string>
    <string name="Treatment_description">Opis leczenia</string>
    <string name="Treatment_plan">Plan leczenia</string>
    <string name="user_list">Lista użytkowników</string>
    <string name="canceling_appointment">Twoja wizyta została anulowana</string>
    <string name="Number_Appointments">Brak wizyt</string>
    <string name="Legend1">Weekend lub dni przeszłe</string>
    <string name="Legend2">Dzisiaj</string>
    <string name="Legend3">Dzień całkowicie wolny</string>
    <string name="Legend4">Dzień częściowo zajęty</string>
    <string name="Legend5">Dzień całkowicie zajęty</string>
    <string name="current_email">Obecny email</string>
    <string name="New_email">Nowy email</string>
    <string name="new_phone_number">Nowy numer telefonu</string>
    <string name="change_phone_number">Zmień numer telefonu</string>
    <string name="Work_hours">Godziny pracy:</string>
    <string name="Dentist">Dentysta:</string>
    <string name="Assistant">Asystent:</string>
    <string name="Adress">Adres:</string>
    <string name="NumberCon">Telefon:</string>
    <string name="EmailCon">Email:</string>
    <string name="Upload_photo">Prześlij zdjęcie RTG</string>
    <string name="positive">Pozytywna</string>
    <string name="negavite">Negatywna</string>
    <string name="your_opinion">Napisz swoją opinię</string>
    <string name="send">Wyślij</string>
    <string name="edit">Edytuj</string>
    <string name="NameDetail">Imię:</string>
    <string name="EmailDetail">Email:</string>
    <string name="PhoneDetail">Telefon:</string>
    <string name="SeePhotosDetail">Zobacz zdjęcia</string>
    <string name="HistoryTreatment">Historia Leczenia</string>
    <string name="search_user">Wyszukaj użytkownika</string>
    <string name="AddHistoryTreatment">Dodaj Historię Leczenia</string>
    <string name="MedicalHistoryEdit">Edycja</string>
    <string name="MedicalHistoryTreatmentPlan">Plan leczenia:</string>
    <string name="MedicalHistoryDescription">Opis:</string>
    <string name="MedicalHistoryDescription2">Opis leczenia</string>
    <string name="MedicalHistoryTreatmentPlan2">Plan leczenia</string>
    <string name="MedicalHistoryDate">Data: 22.08.2024</string>
    <string name="date">Date</string>
    <string name="CalendarNav">Kalendarz</string>
    <string name="SettingsNav">Ustawienia</string>
    <string name="DayWithoutAppointments">Ten dzień nie ma rozpisanych wizyt</string>
    <string name="ErrorAppointments">Błąd podczas sprawdzania wizyt</string>
    <string name="ErrorDownloadingAppointments">Błąd przy pobieraniu wizyt</string>
    <string name="NotLogged">Nie jesteś zalogowany</string>
    <string name="CancelConfirm">Potwierdzenie anulowania</string>
    <string name="QuestionCancelConfirm">Czy na pewno chcesz anulować wizytę?</string>
    <string name="ErrorCancelAppointment">Błąd przy anulowaniu wizyty</string>
    <string name="SuccessCancelAppointment">Twoja wizyta została anulowana na %1$s o godzinie %2$s:00.</string>
    <string name="EnterAllData">Wprowadź wszystkie dane</string>
    <string name="ErrorChangeEmail">Zmiana emaila nie powiodła się: %1$s</string>
    <string name="AuthError">Ponowne uwierzytelnienie nie powiodło się: %1$s</string>
    <string name="AuthError2">Nie można pobrać aktualnego użytkownika.</string>
    <string name="ChangeEmailSuccess">Email zmieniony pomyślnie na: %1$s. Zostałeś wylogowany.</string>
    <string name="ChangeEmailError">Nie udało się zaktualizować emaila w bazie danych: %1$s</string>
    <string name="ChangePhoneSuccess">Numer telefonu zmieniony pomyślnie na: %1$s</string>
    <string name="ChangePhoneError">Nie udało się zaktualizować numeru telefonu w bazie danych: %1$s</string>
    <string name="WorkHoursContact">8:00-20:00 (dni robocze)</string>
    <string name="DentistContact">Stomatolog Adrian Wach</string>
    <string name="AssistantContact">Asystent stomatologiczny Marek Wach</string>
    <string name="AdressContact">ul. Prac Inżyniera 56/21, Kraków</string>
    <string name="PhoneContact">+48 123 123 123</string>
    <string name="EmailContact">gabinetpraca@interia.pl</string>
    <string name="DayNoAppointments">Ten dzień nie ma rozpisanych wizyt</string>
    <string name="CancelConfirm2">Potwierdzenie anulowania</string>
    <string name="CancelConfrimQuestion">Czy na pewno chcesz anulować wizytę?</string>
    <string name="AppointmentCancelled">Wizyta została odwołana</string>
    <string name="AppointmentCancelledError">Błąd przy odwoływaniu wizyty</string>
    <string name="AppointmentsView">Zobacz Wizyty</string>
    <string name="UploadPhotos">Wgraj Zdjęcia</string>
    <string name="ContactInfo">Informacje Kontaktowe</string>
    <string name="LeaveReview">Wystaw Opinię</string>
    <string name="AdminPanel">Panel Admina</string>
    <string name="AllFieldsFilled">Wszystkie pola muszą być wypełnione</string>
    <string name="GetEmail">Podaj email</string>
    <string name="LoginSuccess">Logowanie zakończone powodzeniem</string>
    <string name="LoginError">Błąd logowania: błędny email lub hasło</string>
    <string name="ChangePasswordInsctructions">Instrukcje dotyczące resetowania hasła zostały wysłane na podany adres email</string>
    <string name="ChangePasswordError">Błąd resetowania hasła: %1$s</string>
    <string name="SelectPicture">Select Picture</string>
    <string name="PhotoUploadSuccess">Upload successful</string>
    <string name="PhotoUploadError">Upload failed</string>
    <string name="PhotoUploadErrorNoFile">No file selected</string>
    <string name="RegisterSuccess">Rejestracja zakończona powodzeniem</string>
    <string name="RegisterError">Błąd rejestracji: %1$s</string>
    <string name="EnterOpinion">Proszę wpisać treść opinii</string>
    <string name="OpinionSend">Opinia została wysłana</string>
    <string name="OpinionError">Błąd przy wysyłaniu opinii: %1$s</string>
    <string name="OpinionErrorUser">Nie znaleziono użytkownika</string>
    <string name="OpinionErrorUserDownload">Błąd przy pobieraniu danych użytkownika: %1$s</string>
    <string name="NoOpinionEdit">Nie znaleziono opinii do edycji</string>
    <string name="OpinionErrorDownload">Błąd przy pobieraniu opinii: %1$s</string>
    <string name="OpinionErrorDownload2">Błąd przy pobieraniu opinii: %1$s</string>
    <string name="DeleteAccountConfirmQuestion">Czy na pewno chcesz usunąć swoje konto? Tej operacji nie można cofnąć.</string>
    <string name="DeletedAccount">Konto zostało usunięte</string>
    <string name="DeletedAccountError">Nie udało się usunąć konta: %1$s</string>
    <string name="NoDescription">Brak opisu</string>
    <string name="NoTreatmentPlan">Brak planu leczenia</string>
    <string name="DateError">Data: Brak daty</string>
    <string name="AddHistoryTreatment2">Dodaj Historię Leczenia</string>
    <string name="EditHistoryTreatment">Edytuj Historię Leczenia</string>
    <string name="ChooseWorkingDay">Wybierz dzień roboczy</string>
    <string name="ChooseTimeAppointment">Wybierz godzinę wizyty</string>
    <string name="BusyAppointment">Wybrany przez ciebie termin jest zajęty, wybierz wolny termin</string>
    <string name="AppointmentSaved">Wizyta zapisana</string>
    <string name="AppointmentSavedError">Błąd przy zapisywaniu wizyty</string>
    <string name="AppointmentConfirmEmail">Potwierdzenie wizyty</string>
    <string name="Nodata">Brak daty</string>
    <string name="ChangeLanguage">Zmień Język</string>
    <string name="HistoryTreatmentDate">Data: %1$s</string>
    <string name="Add">Dodaj</string>
    <string name="Cancel">Anuluj</string>
    <string name="Save">Zapisz</string>
    <string name="CancelTreatment">Anuluj</string>
    <string name="ChangeEmail">Zmień adres email</string>
    <string name="ChangePhoneNumber">Zmień nr Telefonu</string>
    <string name="DeleteAccount">Usuń konto</string>
    <string name="LogOut">Wyloguj się</string>
    <string name="LoggingOut">Wylogowanie</string>
    <string name="LoggingOutConfirm">Czy na pewno chcesz się wylogować?</string>
    <string name="LoggedOut">Wylogowano</string>
    <string name="LogoutYes">Tak</string>
    <string name="LogoutNo">Nie</string>
    <string name="DeleteAccountTitle">Usuń konto</string>
    <string name="AppointYes">Tak</string>
    <string name="AppointNo">Nie</string>
</resources>