<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp"
    android:background="@drawable/background_item"
    android:layout_marginBottom="8dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/dateTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/MedicalHistoryDate"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/userFullName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Adrian Wach"
            android:textStyle="bold"
            android:gravity="end"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/MedicalHistoryDescription"
        android:layout_marginTop="8dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/descriptionTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/MedicalHistoryDescription2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/MedicalHistoryTreatmentPlan"
        android:layout_marginTop="8dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/treatmentPlanTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/MedicalHistoryTreatmentPlan2" />

    <Button
        android:id="@+id/editButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/MedicalHistoryEdit"
        android:layout_gravity="end"
        android:layout_marginTop="8dp"
        android:background="@drawable/button_background"
        android:textColor="@android:color/white"/>
</LinearLayout>
