<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".LoginRegister.RegisterActivity"
    android:background="#f2f2f2">

    <!-- Tytuł rejestracji -->
    <TextView
        android:id="@+id/register_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Register"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="#000000"
        android:layout_gravity="center_horizontal"
        android:paddingBottom="24dp" />

    <!-- Pole Imię -->
    <EditText
        android:id="@+id/editTextFirstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Name"
        android:inputType="textPersonName"
        android:background="@drawable/edit_text_background"
        android:padding="12dp"
        android:layout_marginBottom="16dp" />

    <!-- Pole Nazwisko -->
    <EditText
        android:id="@+id/editTextLastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Last_name"
        android:inputType="textPersonName"
        android:background="@drawable/edit_text_background"
        android:padding="12dp"
        android:layout_marginBottom="16dp" />

    <!-- Pole Email -->
    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:background="@drawable/edit_text_background"
        android:padding="12dp"
        android:layout_marginBottom="16dp" />

    <!-- Pole Hasło -->
    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:background="@drawable/edit_text_background"
        android:padding="12dp"
        android:layout_marginBottom="16dp" />

    <!-- Pole Numer telefonu -->
    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:background="@drawable/edit_text_background"
        android:padding="12dp"
        android:layout_marginBottom="24dp" />

    <!-- Przycisk Zarejestruj się -->
    <Button
        android:id="@+id/buttonRegisterSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Register"
        android:textColor="#FFFFFF"
        android:background="@drawable/button_background"
        android:padding="12dp" />

</LinearLayout>
