<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Work_hours"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:paddingBottom="4dp" />

        <TextView
            android:id="@+id/contact_hours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:paddingBottom="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Dentist"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:paddingBottom="4dp" />

        <TextView
            android:id="@+id/contact_dentist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:paddingBottom="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Assistant"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:paddingBottom="4dp" />

        <TextView
            android:id="@+id/contact_assistant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:paddingBottom="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Adress"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:paddingBottom="4dp" />

        <TextView
            android:id="@+id/contact_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:paddingBottom="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/NumberCon"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:paddingBottom="4dp" />

        <TextView
            android:id="@+id/contact_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:paddingBottom="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/EmailCon"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:paddingBottom="4dp" />

        <TextView
            android:id="@+id/contact_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:paddingBottom="16dp" />
    </LinearLayout>
</FrameLayout>
