<!-- fragment_change_phone.xml -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@android:color/white">

    <EditText
        android:id="@+id/editTextCurrentEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/current_email"
        android:inputType="textEmailAddress"
        android:background="@drawable/edit_text_background"
        android:padding="12dp"/>

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:layout_marginTop="16dp"
        android:background="@drawable/edit_text_background"
        android:padding="12dp"/>

    <EditText
        android:id="@+id/editTextNewPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_phone_number"
        android:inputType="phone"
        android:layout_marginTop="16dp"
        android:background="@drawable/edit_text_background"
        android:padding="12dp"/>

    <FrameLayout
        android:id="@+id/buttonConfirmChangeContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@drawable/button_background"
            android:padding="12dp">

            <ImageView
                android:id="@+id/buttonIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_local_phone_24" />

            <TextView
                android:id="@+id/buttonText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change_phone_number"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                android:layout_marginTop="4dp"/>
        </LinearLayout>
    </FrameLayout>

</LinearLayout>
